# LLVM_Linter_and_Mutator

./: CMakeLists.txt  Linter.cpp  Linter.h  Mutator.cpp  Mutator.h  compile.sh  main.cpp  mutate.cpp  parse.cpp
